# poc-orkes

./: .env.sample  .gitignore  README.md
scripts/: cleanup.sh  register.sh  run_deploy.sh  run_pipeline.sh  status.sh
tasks/: taskdefs.json
tasks/samples/: deploy_input.json  deploy_success_input.json  pipeline_input.json
worker/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
worker/src/: server.py
worker/src/worker/: __init__.py
workflows/: deploy_simple_v1.json  finalize_deployment_v1.json  pipeline_simple_v1.json  rollback_deployment_v1.json
